# student-database

./: CMakeLists.txt  requirements.md
src/: database.cpp  database.hpp  main.cpp  student.cpp  student.hpp  tests.cpp
